--- a/0-homepage.html
+++ b/0-homepage.html
@@ -17,27 +17,85 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header class="container justify-content-center">
-        <div class="container position-absolute mt-4">
-            <nav class="navbar justify-content-between navbar-expand-lg">
-                <a class="navbar-brand" href="#">
-                    <img class="h-100" src="images/smile_off.png" alt="smiley-face" width="36px" height="31px">
-                    <img class="h-100" src="images/logo.png" alt="smile-school-logo" width="112px" height="13px">
-                </a>
-                <ul class="navbar-nav">
-                    <li class="nav-item text-white mr-5">COURSES</li>
-                    <li class="nav-item text-white mr-5">PRICING</li>
-                    <li class="nav-item text-white">LOGIN</li>
-                </ul>
+    <!-- Header -->
+    <header>
+        <div class="row justify-content-center">
+            <!-- Navigation -->
+            <nav class="navbar navbar-expand-lg position-absolute mt-4 p-0">
+                <div class="container">
+                    <a class="navbar-brand" href="#">
+                        <img class="h-100" src="images/smile_off.png" alt="smiley-face" width="36px" height="31px">
+                        <img class="h-100" src="images/logo.png" alt="smile-school-logo" width="112px" height="13px">
+                    </a>
+                    <ul class="navbar-nav text-white font-weight-bold">
+                        <li class="nav-item mr-5">COURSES</li>
+                        <li class="nav-item mr-5">PRICING</li>
+                        <li class="nav-item">LOGIN</li>
+                    </ul>
+                </div>
             </nav>
         </div>
     </header>
+    <!-- Main -->
     <main>
-        <div>
-            <div>
-                <img src="images/pic_1.jpg" alt="hero-image-woman-smiling" class="img-fluid">
-            </div>           
-        </div>
+        <!-- Section hero -->
+        <section class="section-hero hero-homepage">
+            <div class="hero-image d-flex flex-column justify-content-center text-white text-center">
+                <div class="container mt-5 mb-5">
+                    <div class="row justify-content-center align-items-center">
+                        <h1 class="get-schooled font-weight-bold mb-0">Get schooled</h1>
+                        <div class="container">
+                            <div class="row justify-content-center">
+                                <div class="col-1 m-2 font-weight-bold">SMILES</div>
+                                <div class="col-1 m-2 font-weight-bold">GRIN</div>
+                                <div class="col-1 m-2 font-weight-bold">LAUGH</div>
+                            </div>
+                        </div>
+                        <div class="row mt-4">
+                            <button type="button" class="btn btn-color rounded-pill">Register for free</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- Pro section -->
+                <div class="container-fluid mt-5 pt-5">
+                    <div class="mb-5 pb-5">
+                        <h2><span class="learn font-weight-bold">Learn</span><span class="font-weight-light"> from the pros</span></h2>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <img class="rounded-circle" src="images/profile_1.jpg" alt="Smile pro 1" width="150px" height="150px">
+                            <div class="container">
+                                <p>
+                                    <span class="name font-weight-bolder">Phillip Massey</span><br>
+                                    <span class="font-weight-light font-italic">« Smile of the year »<br>2018 - 2019</span>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <img class="rounded-circle mb-2" src="images/profile_2.jpg" alt="Smile pro 2" width="150px" height="150px">
+                            <p>
+                                <span class="name font-weight-bolder">Nannie Lawrence</span><br>
+                                <span class="font-weight-light font-italic">Best « little smile »<br>2017</span>
+                            </p>
+                        </div>
+                        <div class="col">
+                            <img class="rounded-circle mb-2" src="images/profile_3.jpg" alt="Smile pro 3" width="150px" height="150px">
+                            <p>
+                                <span class="name font-weight-bolder">Bruce Walters</span><br>
+                                <span class="font-weight-light font-italic">Best « Friend Smile »<br>live performance 2019</span>
+                            </p>
+                        </div>
+                        <div class="col">
+                            <img class="rounded-circle mb-2" src="images/profile_4.jpg" alt="Smile pro 4" width="150px" height="150px">
+                            <p>
+                                <span class="name font-weight-bolder">Henry Hughes</span><br>
+                                <span class="font-weight-light font-italic">« 24h smiles » winner<br>2016 - 2019</span>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
