Add hero section stil not quite right

--- a/0-pricing.html
+++ b/0-pricing.html
@@ -48,32 +48,32 @@
                     </div>
                 </nav>
             </header>        
-            <div class="container-md px-0 mb-5">
-                <div class="mx-auto">
+            <div class="container-md px-0 mt-5 pt-5 mb-5">
+                <div class="mt-4 pt-4">
                     <h4>What is
                         <span><img class="mx-2" src="images/smile_off.png" alt="smiley-face" width="36px" height="31px"></span>
                         <span class="coiny">SmileSchool</span> ?
                     </h4>
-                    <p class="tagline font-weight-bold">Go Pro!</p>
+                    <p class="tagline font-weight-bold mt-5 mb-3">Go Pro!</p>
                 </div>
-                <table class="table text-white">
-                    <thead>
+                <table class="table text-white text-left">
+                    <thead class="table-borderless border-top-bottom-none">
                       <tr>
-                        <th scope="col-4"><span></span></th>
+                        <th scope="col-4"></th>
                         <th scope="col-4">
                             <button type="button" class="btn btn-color rounded-pill">BUY 3 MONTHS</button>
-                            <p>$3.60</p>
-                            <small>$1.20/month</small>
+                            <p class="price mt-3 mb-0">$3.60</p>
+                            <small class="price-per-month">$1.20/month</small>
                         </th>
                         <th scope="col-4">
                             <button type="button" class="btn btn-color rounded-pill">BUY 1 YEAR</button>
-                            <p>$12.99</p>
-                            <small>$1.08/month</small>
+                            <p class="price mt-3 mb-0">$12.99</p>
+                            <small class="price-per-month">$1.08/month</small>
                         </th>
                       </tr>
                     </thead>
                     <tbody>
-                      <tr>
+                      <tr class="border-top-bottom-none">
                         <th scope="row">Unlimitted access to all tutorials</th>
                         <td class="holberton_school-icon-check"></td>
                         <td class="holberton_school-icon-check"></td>
@@ -94,7 +94,10 @@
                         <td class="holberton_school-icon-check"></td>
                       </tr>
                       <tr>
-                        <th scope="row">Exclusive discount on all Signal products</th>
+                        <th class="text-left" scope="row">
+                                <img src="images/signal.png" alt="Signal logo" width="100px" height="auto">
+                                <p>Exclusive discount on all Signal products</p>
+                        </th>
                         <td></td>
                         <td class="holberton_school-icon-check"></td>
                       </tr>
