--- a/1-pricing.html
+++ b/1-pricing.html
@@ -56,8 +56,8 @@
                     </h4>
                     <p class="tagline font-weight-bold mt-5 mb-3">Go Pro!</p>
                 </div>
-                <table class="table text-white text-left">
-                    <thead class="table-borderless border-top-bottom-none">
+                <table class="table text-white text-left table-borderless">
+                    <thead>
                       <tr>
                         <th scope="col-4"></th>
                         <th scope="col-4">
@@ -73,27 +73,27 @@
                       </tr>
                     </thead>
                     <tbody>
-                      <tr class="border-top-bottom-none">
+                      <tr>
                         <th scope="row">Unlimitted access to all tutorials</th>
                         <td class="holberton_school-icon-check"></td>
                         <td class="holberton_school-icon-check"></td>
                       </tr>
-                      <tr>
+                      <tr class="border-top">
                         <th scope="row">Access SmileSchool private forum</th>
                         <td class="holberton_school-icon-check"></td>
                         <td class="holberton_school-icon-check"></td>
                       </tr>
-                      <tr>
+                      <tr class="border-top">
                         <th scope="row">Access Smiles contests & Smiles Analysis</th>
                         <td class="holberton_school-icon-check"></td>
                         <td class="holberton_school-icon-check"></td>
                       </tr>
-                      <tr>
+                      <tr class="border-top">
                         <th scope="row">Get a free toothbrush</th>
                         <td></td>
                         <td class="holberton_school-icon-check"></td>
                       </tr>
-                      <tr>
+                      <tr class="border-top">
                         <th class="text-left" scope="row">
                                 <img src="images/signal.png" alt="Signal logo" width="100px" height="auto">
                                 <p>Exclusive discount on all Signal products</p>
