--- a/2-pricing.html
+++ b/2-pricing.html
@@ -57,8 +57,8 @@
                     <p class="tagline font-weight-bold mt-5 mb-3">Go Pro!</p>
                 </div>
                 <!-- Table -->
-                <table class="table text-white text-left">
-                    <thead class="table-borderless border-top-bottom-none">
+                <table class="table text-white text-left table-borderless">
+                    <thead>
                       <tr>
                         <th scope="col-4"></th>
                         <th scope="col-4">
@@ -74,27 +74,27 @@
                       </tr>
                     </thead>
                     <tbody>
-                      <tr class="border-top-bottom-none">
+                      <tr>
                         <th scope="row">Unlimitted access to all tutorials</th>
                         <td class="holberton_school-icon-check"></td>
                         <td class="holberton_school-icon-check"></td>
                       </tr>
-                      <tr>
+                      <tr class="border-top">
                         <th scope="row">Access SmileSchool private forum</th>
                         <td class="holberton_school-icon-check"></td>
                         <td class="holberton_school-icon-check"></td>
                       </tr>
-                      <tr>
+                      <tr class="border-top">
                         <th scope="row">Access Smiles contests & Smiles Analysis</th>
                         <td class="holberton_school-icon-check"></td>
                         <td class="holberton_school-icon-check"></td>
                       </tr>
-                      <tr>
+                      <tr class="border-top">
                         <th scope="row">Get a free toothbrush</th>
                         <td></td>
                         <td class="holberton_school-icon-check"></td>
                       </tr>
-                      <tr>
+                      <tr class="border-top">
                         <th class="text-left" scope="row">
                                 <img src="images/signal.png" alt="Signal logo" width="100px" height="auto">
                                 <p>Exclusive discount on all Signal products</p>
