Change height of smile

--- a/1-homepage.html
+++ b/1-homepage.html
@@ -32,7 +32,7 @@
                         </button>
                         <a class="navbar-brand" href="#">
                             <img class="h-100" src="images/smile_off.png" alt="smiley-face" width="36px" height="31px">
-                            <img class="h-100" src="images/logo.png" alt="smile-school-logo" width="112px" height="13px">
+                            <img class="h-100" src="images/logo.png" alt="smile-school-logo" width="112px" height="auto">
                             <!-- Hidden nav -->
                             <ul class="list-unstyled font-weight-bold collapse" id="hiddenNavItems">
                                 <li class="nav-item">COURSES</li>
