--- a/2-homepage.html
+++ b/2-homepage.html
@@ -27,24 +27,27 @@
                 <!-- Navigation -->
                 <nav class="navbar navbar-expand-sm mt-4 p-0">
                     <div class="container">
-                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#hiddenNavItems" aria-controls="hiddenNavItems" aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="holberton_school-icon-menu d-sm-none"></span>
-                        </button>
-                        <a class="navbar-brand" href="#">
-                            <img class="h-100" src="images/smile_off.png" alt="smiley-face" width="36px" height="31px">
-                            <img class="h-100" src="images/logo.png" alt="smile-school-logo" width="112px" height="auto">
-                            <!-- Hidden nav -->
-                            <ul class="list-unstyled font-weight-bold collapse" id="hiddenNavItems">
-                                <li class="nav-item">COURSES</li>
-                                <li class="nav-item">PRICING</li>
-                                <li class="nav-item">LOGIN</li>
-                            </ul>
-                        </a>
-                        <ul class="navbar-nav font-weight-bold">
-                            <li class="nav-item mr-5 d-none d-sm-none d-sm-block">COURSES</li>
-                            <li class="nav-item mr-5 d-none d-sm-none d-sm-block">PRICING</li>
-                            <li class="nav-item d-none d-sm-none d-sm-block">LOGIN</li>
-                        </ul>
+                        <div class="d-flex w-100 justify-content-between align-items-center">
+                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#hiddenNavItems" aria-controls="hiddenNavItems" aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="holberton_school-icon-menu d-sm-none text-white"></span>
+                            </button>
+                            <a class="navbar-brand" href="#">
+                                <div class="d-flex flex-sm-row flex-column align-items-center">
+                                    <img class="mr-3 mb-2" src="images/smile_off.png" alt="smiley-face" width="36px" height="31px">
+                                    <img src="images/logo.png" alt="smile-school-logo" width="112px" height="auto">
+                                </div>
+                                <ul class="list-unstyled text-white font-weight-bold collapse" id="hiddenNavItems">
+                                    <li class="nav-item">COURSES</li>
+                                    <li class="nav-item">PRICING</li>
+                                    <li class="nav-item">LOGIN</li>
+                                </ul>
+                            </a>    
+                            <ul class="navbar-nav text-white font-weight-bold">
+                                <li class="nav-item mr-5 d-none d-sm-none d-sm-block">COURSES</li>
+                                <li class="nav-item mr-5 d-none d-sm-none d-sm-block">PRICING</li>
+                                <li class="nav-item d-none d-sm-none d-sm-block">LOGIN</li>
+                            </ul>    
+                        </div>
                     </div>
                 </nav>
             </header>        
@@ -58,7 +61,7 @@
                             <div class="col-1 m-2 p-0 font-weight-bold">LAUGH</div>
                         </div>
                         <div class="row justify-content-center mt-4">
-                            <button type="button" class="btn btn-color rounded-pill">Register for free</button>
+                            <button type="button" class="btn btn-color rounded-pill shadow-lg text-uppercase">Register for free</button>
                         </div>
                     </div>
                 </div>
