--- a/1-homepage.html
+++ b/1-homepage.html
@@ -52,8 +52,8 @@
                 </nav>
             </header>        
             <div class="container-md px-0 mb-5">
-                <div class="row justify-content-center align-items-center">
-                    <h1 class="get-schooled font-weight-bold mb-0">Get schooled</h1>
+                <div class="row justify-content-center mt-5 pt-5">
+                    <h1 class="get-schooled font-weight-bold mt-5 mb-0">Get schooled</h1>
                     <div class="container-md p-0">
                         <div class="row justify-content-center">
                             <div class="col-1 m-2 p-0 font-weight-bold">SMILES</div>
@@ -112,15 +112,6 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <div class="row justify-content-around align-items-center my-5 px-5 ">
-                                <!-- <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                                    <span class="holberton_school-icon-arrow_4 mr-5 d-block d-sm-none" aria-hidden="true"></span>
-                                    <span class="sr-only">Previous</span>
-                                </a>
-                                <img class="rounded-circle" src="images/profile_5.jpg" alt="Smile pro 5" width="160px" height="160px">
-                                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                                    <span class="holberton_school-icon-arrow_3 d-block d-sm-none" aria-hidden="true"></span>
-                                    <span class="sr-only">Next</span>
-                                </a> -->
                                 <span class="holberton_school-icon-arrow_4 d-block d-sm-none" aria-hidden="true"></span>
                                     <img class="rounded-circle" src="images/profile_5.jpg" alt="Smile pro 5" width="160px" height="160px">
                                 <span class="holberton_school-icon-arrow_3 d-block d-sm-none" aria-hidden="true"></span>
@@ -145,11 +136,11 @@
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                      <span class="holberton_school-icon-arrow_4 mr-5 d-none d-sm-block" aria-hidden="true"></span>
+                      <span class="holberton_school-icon-arrow_4 mr-5 pr-5 d-none d-sm-block" aria-hidden="true"></span>
                       <span class="sr-only">Previous</span>
                     </a>
                     <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                      <span class="holberton_school-icon-arrow_3 d-none d-sm-block" aria-hidden="true"></span>
+                      <span class="holberton_school-icon-arrow_3 ml-5 d-none d-sm-block" aria-hidden="true"></span>
                       <span class="sr-only">Next</span>
                     </a>
                 </div>
