--- a/4-homepage.html
+++ b/4-homepage.html
@@ -395,8 +395,8 @@
         </section>
         <!-- Videos Section -->
         <section class="section-videos">
-            <div class="tutorials container-fluid">
-                <h1 class="row justify-content-center tutorials-h1">
+            <div class="tutorials container-fluid my-3">
+                <h1 class="row justify-content-center tutorials-h1 my-5">
                     <span class="font-weight-bolder purple-text mr-2">Latest</span>
                     <span class="font-weight-light"> videos</span>
                 </h1>
