--- a/1-pricing.html
+++ b/1-pricing.html
@@ -60,10 +60,11 @@
                     </h4>
                     <p class="tagline font-weight-bold mt-5 mb-3">Go Pro!</p>
                 </div>
-                <table class="table text-white text-left table-borderless">
+                <table class="table text-white table-borderless text-left">
                     <thead>
                       <tr>
-                        <th scope="col-4"></th>
+                        <th class="p-0" scope="col-4">
+                        </th>
                         <th scope="col-4">
                             <button type="button" class="btn btn-color rounded-pill">BUY 3 MONTHS</button>
                             <p class="price mt-3 mb-0">$3.60</p>
@@ -98,7 +99,7 @@
                         <td class="holberton_school-icon-check"></td>
                       </tr>
                       <tr class="border-top">
-                        <th class="text-left" scope="row">
+                        <th scope="row">
                                 <img src="images/signal.png" alt="Signal logo" width="100px" height="auto">
                                 <p>Exclusive discount on all Signal products</p>
                         </th>
