--- a/3-pricing.html
+++ b/3-pricing.html
@@ -112,7 +112,7 @@
         </section>
         <!-- Carousel Section -->
         <section class="section-carousel">
-            <div class="carousel-of-quotes container-fluid">
+            <div class="carousel-of-quotes container-fluid text-white">
                 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
