Update results section

--- a/2-courses.html
+++ b/2-courses.html
@@ -104,12 +104,12 @@
                     <p>11 videos</p>
                 </div>
                 <div class="row">
-                    <div class="card col-lg-3 col-md-6 col-sm-12">
+                    <div class="card col-lg-3 col-md-6 col-sm-12 border-0">
                         <div class="tutorial-bg-4 d-flex justify-content-center align-items-center">
                             <img src="images/play.png" class="card-img-top" alt="Play button">
                         </div>
                         <div class="card-body">
-                            <h5 class="card-title font-weight-bold tutorials-h">Diagonal Smile</h5>
+                            <h5 class="card-title font-weight-bold tutorials-h1">Diagonal Smile</h5>
                             <p class="card-text tutorials-p">Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                             <div class="row">
                                 <img class="rounded-circle mx-3" src="images/profile_1.jpg" alt="Smile pro 1" width="30px" height="30px">
@@ -127,12 +127,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card col-lg-3 col-md-6 col-sm-12">
+                    <div class="card col-lg-3 col-md-6 col-sm-12 border-0">
                         <div class="tutorial-bg-3 d-flex justify-content-center align-items-center">
                             <img src="images/play.png" class="card-img-top" alt="Play button">
                         </div>
                         <div class="card-body">
-                            <h5 class="card-title font-weight-bold tutorials-h">Sad Smile</h5>
+                            <h5 class="card-title font-weight-bold tutorials-h1">Sad Smile</h5>
                             <p class="card-text tutorials-p">Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                             <div class="row">
                                 <img class="rounded-circle mx-3" src="images/profile_1.jpg" alt="Smile pro 1" width="30px" height="30px">
@@ -150,12 +150,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card col-lg-3 col-md-6 col-sm-12">
+                    <div class="card col-lg-3 col-md-6 col-sm-12 border-0">
                         <div class="tutorial-bg-1 d-flex justify-content-center align-items-center">
                             <img src="images/play.png" class="card-img-top" alt="Play button">
                         </div>
                         <div class="card-body">
-                            <h5 class="card-title font-weight-bold tutorials-h">Natural Smile</h5>
+                            <h5 class="card-title font-weight-bold tutorials-h1">Natural Smile</h5>
                             <p class="card-text tutorials-p">Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                             <div class="row">
                                 <img class="rounded-circle mx-3" src="images/profile_1.jpg" alt="Smile pro 1" width="30px" height="30px">
@@ -173,12 +173,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card col-lg-3 col-md-6 col-sm-12">
+                    <div class="card col-lg-3 col-md-6 col-sm-12 border-0">
                         <div class="tutorial-bg-2 d-flex justify-content-center align-items-center">
                             <img src="images/play.png" class="card-img-top" alt="Play button">
                         </div>
                         <div class="card-body">
-                            <h5 class="card-title font-weight-bold tutorials-h">Happy Smile</h5>
+                            <h5 class="card-title font-weight-bold tutorials-h1">Happy Smile</h5>
                             <p class="card-text tutorials-p">Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                             <div class="row">
                                 <img class="rounded-circle mx-3" src="images/profile_1.jpg" alt="Smile pro 1" width="30px" height="30px">
@@ -198,12 +198,12 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="card col-lg-3 col-md-6 col-sm-12">
+                    <div class="card col-lg-3 col-md-6 col-sm-12 border-0">
                         <div class="tutorial-bg-4 d-flex justify-content-center align-items-center">
                             <img src="images/play.png" class="card-img-top" alt="Play button">
                         </div>
                         <div class="card-body">
-                            <h5 class="card-title font-weight-bold tutorials-h">Diagonal Smile</h5>
+                            <h5 class="card-title font-weight-bold tutorials-h1">Diagonal Smile</h5>
                             <p class="card-text tutorials-p">Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                             <div class="row">
                                 <img class="rounded-circle mx-3" src="images/profile_1.jpg" alt="Smile pro 1" width="30px" height="30px">
@@ -221,12 +221,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card col-lg-3 col-md-6 col-sm-12">
+                    <div class="card col-lg-3 col-md-6 col-sm-12 border-0">
                         <div class="tutorial-bg-3 d-flex justify-content-center align-items-center">
                             <img src="images/play.png" class="card-img-top" alt="Play button">
                         </div>
                         <div class="card-body">
-                            <h5 class="card-title font-weight-bold tutorials-h">Sad Smile</h5>
+                            <h5 class="card-title font-weight-bold tutorials-h1">Sad Smile</h5>
                             <p class="card-text tutorials-p">Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                             <div class="row">
                                 <img class="rounded-circle mx-3" src="images/profile_1.jpg" alt="Smile pro 1" width="30px" height="30px">
@@ -244,12 +244,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card col-lg-3 col-md-6 col-sm-12">
+                    <div class="card col-lg-3 col-md-6 col-sm-12 border-0">
                         <div class="tutorial-bg-1 d-flex justify-content-center align-items-center">
                             <img src="images/play.png" class="card-img-top" alt="Play button">
                         </div>
                         <div class="card-body">
-                            <h5 class="card-title font-weight-bold tutorials-h">Natural Smile</h5>
+                            <h5 class="card-title font-weight-bold tutorials-h1">Natural Smile</h5>
                             <p class="card-text tutorials-p">Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                             <div class="row">
                                 <img class="rounded-circle mx-3" src="images/profile_1.jpg" alt="Smile pro 1" width="30px" height="30px">
@@ -267,12 +267,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card col-lg-3 col-md-6 col-sm-12">
+                    <div class="card col-lg-3 col-md-6 col-sm-12 border-0">
                         <div class="tutorial-bg-2 d-flex justify-content-center align-items-center">
                             <img src="images/play.png" class="card-img-top" alt="Play button">
                         </div>
                         <div class="card-body">
-                            <h5 class="card-title font-weight-bold tutorials-h">Happy Smile</h5>
+                            <h5 class="card-title font-weight-bold tutorials-h1">Happy Smile</h5>
                             <p class="card-text tutorials-p">Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                             <div class="row">
                                 <img class="rounded-circle mx-3" src="images/profile_1.jpg" alt="Smile pro 1" width="30px" height="30px">
@@ -292,12 +292,12 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="card col-lg-3 col-md-6 col-sm-12">
+                    <div class="card col-lg-3 col-md-6 col-sm-12 border-0">
                         <div class="tutorial-bg-4 d-flex justify-content-center align-items-center">
                             <img src="images/play.png" class="card-img-top" alt="Play button">
                         </div>
                         <div class="card-body">
-                            <h5 class="card-title font-weight-bold tutorials-h">Diagonal Smile</h5>
+                            <h5 class="card-title font-weight-bold tutorials-h1">Diagonal Smile</h5>
                             <p class="card-text tutorials-p">Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                             <div class="row">
                                 <img class="rounded-circle mx-3" src="images/profile_1.jpg" alt="Smile pro 1" width="30px" height="30px">
@@ -315,12 +315,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card col-lg-3 col-md-6 col-sm-12">
+                    <div class="card col-lg-3 col-md-6 col-sm-12 border-0">
                         <div class="tutorial-bg-3 d-flex justify-content-center align-items-center">
                             <img src="images/play.png" class="card-img-top" alt="Play button">
                         </div>
                         <div class="card-body">
-                            <h5 class="card-title font-weight-bold tutorials-h">Sad Smile</h5>
+                            <h5 class="card-title font-weight-bold tutorials-h1">Sad Smile</h5>
                             <p class="card-text tutorials-p">Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                             <div class="row">
                                 <img class="rounded-circle mx-3" src="images/profile_1.jpg" alt="Smile pro 1" width="30px" height="30px">
@@ -338,12 +338,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card col-lg-3 col-md-6 col-sm-12">
+                    <div class="card col-lg-3 col-md-6 col-sm-12 border-0">
                         <div class="tutorial-bg-1 d-flex justify-content-center align-items-center">
                             <img src="images/play.png" class="card-img-top" alt="Play button">
                         </div>
                         <div class="card-body">
-                            <h5 class="card-title font-weight-bold tutorials-h">Natural Smile</h5>
+                            <h5 class="card-title font-weight-bold tutorials-h1">Natural Smile</h5>
                             <p class="card-text tutorials-p">Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                             <div class="row">
                                 <img class="rounded-circle mx-3" src="images/profile_1.jpg" alt="Smile pro 1" width="30px" height="30px">
